Updated CSS of Login & Registration page

--- a/SmartRecipeFinder/SmartRecipeFinder/style.css
+++ b/SmartRecipeFinder/SmartRecipeFinder/style.css
@@ -390,14 +390,22 @@ body {
 
 /* Main auth card container */
 .auth-card {
-    background: #C2A386; /* Lighter shade matching the theme */
+    background: rgba(0, 0, 0, 0.5);
     padding: 40px;
     border-radius: 12px;
     width: 380px;
     text-align: center;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     transition: 0.3s ease-in-out;
+    border: solid;
+    border-width: 2px;
+    border-color: white;
+
 }
+    .auth-card:hover {
+        box-shadow: 0px 0px 30px rgba(173, 193, 120, 0.7);
+        transition: 0.3s ease-in-out;
+        transform: scale(1.02);
+    }
 
     /* Title */
     .auth-card h1 {
@@ -407,22 +415,26 @@ body {
     }
 
 /* Input Fields */
-.input-field, .input-password {
+.input-password, .input-field {
     width: 100%;
     padding: 12px;
     margin: 12px 0;
     border: 2px solid #d3b8a0;
     border-radius: 8px;
     font-size: 16px;
-    background: rgba(255, 255, 255, 0.3);
-    color: #5D4037;
+    background: rgba(240, 234, 210, 0.3);
+    color: #F0EAD2;
     transition: 0.3s;
+    border-radius: 50px;
 }
 
-    /* Placeholder text */
-    .input-field::placeholder, .input-password::placeholder {
-        color: #8B6F5A;
-    }
+/* Label text */
+.input-label {
+    color: #F0EAD2;
+    display: block;
+    text-align: left;
+    font-weight: bold;
+}
 
     /* Hover and focus effects */
     .input-field:hover, .input-field:focus,
@@ -430,8 +442,9 @@ body {
         border-color: #8B6F5A;
         box-shadow: 0px 0px 20px rgba(169, 132, 103, 1);
         outline: none;
-        transition-delay: 0.2s;
+        transition-delay: 0.1s;
     }
+
 
 /* Button styling */
 .auth-btn {
@@ -445,6 +458,7 @@ body {
     font-size: 18px;
     cursor: pointer;
     transition: 0.3s;
+    border-radius: 50px;
 }
 
     .auth-btn:hover {
@@ -504,12 +518,12 @@ body {
 .food-wheel {
     width: 250px;
     height: auto;
-    transition: transform 1s ease; 
+    transition: transform 1s ease;
 }
 
-.food-wheel:hover {
-    transform: rotate(360deg); 
-}
+    .food-wheel:hover {
+        transform: rotate(360deg);
+    }
 
 .food-wheel-hover-text {
     font-size: 10px;
